<resources>
    <string name="app_name">ShopMitt</string>
    <string name="today">today</string>
    <string name="tomorrow">tomorrow</string>
    <string name="yesterday">yesterday</string>
    <string name="download_completed">download completed</string>
    <string name="loading">Loading</string>
    <string name="default_notification_channel_id">shopmitt_notification_channel</string>
    <string name="server_error_try_again_later">Try Again later</string>
    <string name="no_internet_connection_available">Internet connection unavailable</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="select_delivery">Select Delivery</string>
    <string name="final_amount">Final Amount</string>
    <string name="shipping_charges">Shipping Charges</string>
    <string name="free">Free</string>
    <string name="sign_in">Sign In</string>
    <string name="discover_fashion">Discover Fashion</string>
    <string name="enter_your_mobile_number_or_email">Enter your Mobile Number</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="new_to_alis">New to Shopmitt ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="or">Or</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="submit">Submit</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="otp">OTP</string>
    <string name="estimated_delivery">Estimated Delivery</string>
    <string name="deliver_to">Deliver To</string>
    <string name="change">Change</string>
    <string name="add_new_address">Add new address</string>
    <string name="card_and_payment">Card and Payment</string>
    <string name="upi">UPI</string>
    <string name="other_banks">Other Banks</string>
    <string name="net_banking">Net Banking</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="add_details">Add Details</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="alternate_number">Alternate Number</string>
    <string name="address">Address</string>
    <string name="pincode">Pincode</string>
    <string name="locality">Locality</string>
    <string name="landmark">Landmark (Optional)</string>
    <string name="home">Home</string>
    <string name="office">Office</string>
    <string name="others">Others</string>
    <string name="add_address">Add Address</string>
    <string name="browse">Browse</string>
    <string name="view_all">View All</string>
    <string name="top_wears">Top Wears</string>
    <string name="bottom_wears">Bottom Wears</string>
    <string name="essentials">Essentials</string>
    <string name="featured">Featured</string>
    <string name="collection">Collection</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email_optional">Enter email (Optional)</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="search">Search</string>
    <string name="no_items_found_n_please_try_something_different">No items found</string>
    <string name="no_internet_connection">No internet Connection</string>
    <string name="speech_prompt">Say something…</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="enter_keyword">Please enter keyword</string>
    <string name="sort">sort</string>
    <string name="size">Size</string>
    <string name="color">Color</string>
    <string name="description">Description</string>
    <string name="related_products">Related Products</string>
    <string name="add">Add</string>
    <string name="we_dont_have">We dont have</string>
    <string name="as_requested">as much as you requested</string>
    <string name="view_size_chart">View size chart</string>
    <string name="drop_cart">Drop Cart</string>
    <string name="logout">Logout</string>
    <string name="are_you_sure_to_logout">Are you sure to logout ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="clear_cart">Clear cart</string>
    <string name="are_you_sure_to_drop_cart">Are you sure to clear cart</string>
    <string name="view_cart_summary">View Cart Summary</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email">Email</string>
    <string name="city">City</string>
    <string name="proceed">Proceed</string>
    <string name="no_orders">No orders</string>
    <string name="edit_address">Edit Address</string>
    <string name="update_profile">Update Profile</string>
    <string name="change_password">Change Password</string>
    <string name="update">Update</string>
    <string name="quantity">Quantity</string>
    <string name="you_save">you save</string>
    <string name="message_in_stock">In Stock</string>
    <string name="message_out_of_stock">Out of Stock</string>
    <string name="remove_cart">Removed from cart</string>
    <string name="product_out_of_stock">Product out of stock</string>
    <string name="out_of_stock">Out of Stock</string>
    <string name="remove">Remove</string>
    <string name="apply">Apply</string>
    <string name="re_order">Re-Order</string>
    <string name="checkout">Checkout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_time_slot">Select time slot</string>
    <string name="no_slots_available">No slots available</string>
    <string name="confirm_slot">Confirm Slot</string>
    <string name="do_you_want_proceed_with_slot">Do you want to proceed with this slot?</string>
    <string name="items">Items</string>
    <string name="item">Item</string>
    <string name="total">Total</string>
    <string name="time_slot">Time Slot</string>
    <string name="ok">OK</string>
    <string name="balance">Balance:</string>
    <string name="add_money">Add Money</string>
    <string name="earn_upto">You can earn upto</string>
    <string name="reward_for_this_product">reward for this product</string>
    <string name="send">Send</string>
    <string name="select_location">Select Location</string>
    <string name="unable_to_get_location">Unable to get location</string>
    <string name="fetching_location">Fetching location..</string>
    <string name="permission_not_granted">Permission not granted</string>
    <string name="enter_location">Enter location</string>
    <string name="location_permission_denied">Location permission denied</string>
    <string name="ok_text">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="set_location">Set Location</string>
    <string name="place_not_found">Place not found</string>

    <string name="google_place_url" translatable="false">https://maps.googleapis.com/maps/api/geocode/json?</string>

    <string name="add_location">Add Location</string>
    <string name="edit_location">Edit Location</string>
    <string name="welcome">Welcome</string>
    <string name="choose_your_location">Choose your location</string>
    <string name="and_start_shopping">and start shopping</string>
    <string name="choose_manually">Choose manually</string>
    <string name="use_current_location">Use current location</string>
    <string name="change_delivery_slot">Change delivery slot time</string>
    <string name="do_you_want_to_continue">Do you want to continue</string>
    <string name="update_available">Update available</string>
    <string name="there_is_newer_version_available">There is a newer version available in Google Play, Please update</string>


</resources>