<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:minWidth="300dp"
    android:background="@color/colorWhite"
    android:padding="12dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add your shipping address"
        android:layout_marginTop="16dp"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/bold"/>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="12dp"
        android:visibility="gone"
        android:id="@+id/cv_location"
        android:backgroundTint="@color/colorWhite"
        app:cardCornerRadius="5dp"
        app:strokeColor="@color/cardViewStroke"
        app:strokeWidth="1dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:id="@+id/image"
                android:layout_centerVertical="true"
                android:src="@drawable/vc_home_address"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/image"
                android:id="@+id/text_location"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:textColor="@color/textColor"
                android:text="@string/add_location"/>

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        style="@style/OutlinedRoundedBoxBlack">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/full_name"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:textSize="14sp"
            android:textColor="@color/colorText"
            android:hint="@string/full_name"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        style="@style/OutlinedRoundedBoxBlack">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mobile_number"
            android:inputType="phone"
            android:maxLines="1"
            android:maxLength="10"
            android:textSize="14sp"
            android:textColor="@color/colorText"
            android:hint="@string/mobile_number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        style="@style/OutlinedRoundedBoxBlack">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pin_code"
            android:inputType="number"
            android:maxLines="1"
            android:maxLength="6"
            android:textSize="14sp"
            android:textColor="@color/colorText"
            android:hint="@string/pincode"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        style="@style/OutlinedRoundedBoxBlack">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/address"
            android:inputType="text"
            android:maxLines="2"
            android:minLines="2"
            android:textSize="14sp"
            android:textColor="@color/colorText"
            android:hint="@string/address"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        style="@style/OutlinedRoundedBoxBlack">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/city"
            android:inputType="text"
            android:maxLines="1"
            android:textSize="14sp"
            android:textColor="@color/colorText"
            android:hint="@string/city"/>
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/add_address"
        style="@style/ButtonTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="12dp"
        android:letterSpacing="0"
        android:text="@string/add_address"
        android:layout_marginBottom="10dp"/>


</LinearLayout>