<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:minWidth="300dp"
    android:background="@color/colorWhite"
    android:padding="12dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Update Profile"
        android:layout_marginTop="16dp"
        android:layout_marginStart="10dp"
        android:textColor="@color/colorText"
        android:fontFamily="@font/bold"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        style="@style/OutlinedRoundedBoxBlack">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/full_name"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:textSize="14sp"
            android:textColor="@color/colorText"
            android:hint="@string/full_name"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        style="@style/OutlinedRoundedBoxBlack">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mobile_number"
            android:inputType="phone"
            android:maxLines="1"
            android:maxLength="10"
            android:textSize="14sp"
            android:textColor="@color/colorText"
            android:hint="@string/mobile_number"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        style="@style/OutlinedRoundedBoxBlack">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textSize="14sp"
            android:textColor="@color/colorText"
            android:hint="@string/email"/>
    </com.google.android.material.textfield.TextInputLayout>



    <Button
        android:id="@+id/add_address"
        style="@style/ButtonTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="12dp"
        android:letterSpacing="0"
        android:text="@string/update"
        android:layout_marginBottom="10dp"/>


</LinearLayout>