<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_activity_pickup_location"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".views.activities.PickupLocationActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="60dp"
            android:text="@string/welcome"
            android:textSize="22sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_title"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="60dp"
            android:text="Let's check that we deliver to \n your address"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@+id/tv_title2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:padding="15dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/vc_delivery" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView3"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/choose_your_location"
                android:textSize="18sp"
                android:textAllCaps="true"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:text="@string/and_start_shopping"
                android:textSize="14sp"
                android:textAllCaps="true"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_gps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:drawableLeft="@drawable/ic_location"
                android:drawablePadding="10dp"
                android:gravity="center"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="@string/use_current_location"
                android:backgroundTint="@color/colorPrimaryDark"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textAllCaps="true"
                android:textColor="#fff" />

            <Button
                android:id="@+id/btn_manual_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="@string/choose_manually"
                android:backgroundTint="@color/colorAccent"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textAllCaps="true"
                android:textColor="#fff" />

        </LinearLayout>
    </RelativeLayout>
</ScrollView>