<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:padding="16dp"
    tools:context=".views.activities.LoginActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/regular"
        android:text="@string/sign_in"
        android:textColor="@color/quantum_white_100"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />




    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_username"
        style="@style/OutlinedRoundedBoxWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_mobile_number_or_email"
            android:inputType="phone"
            android:maxLength="10"
            android:maxLines="1"
            android:textColorHint="@color/quantum_white_100" />
    </com.google.android.material.textfield.TextInputLayout>




    <Button
        android:id="@+id/sign_in"
        style="@style/ButtonTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="8dp"
        android:text="@string/sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tl_username" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/centerLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".5"
        app:layout_constraintTop_toBottomOf="@+id/sign_in" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/new_to_alis"
        android:textColor="@color/quantum_white_100"
        app:layout_constraintEnd_toStartOf="@+id/centerLine"
        app:layout_constraintTop_toBottomOf="@+id/sign_in" />

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="4dp"
        android:fontFamily="@font/bold"
        android:text="@string/sign_up"
        android:textAllCaps="true"
        android:textColor="@color/quantum_white_100"
        app:layout_constraintStart_toEndOf="@+id/centerLine"
        app:layout_constraintTop_toBottomOf="@+id/sign_in" />


    <View
        android:id="@+id/viewOne"
        android:layout_width="90dp"
        android:layout_height="1dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="8dp"
        android:visibility="gone"
        android:background="@color/quantum_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/centerLine"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up" />

    <TextView
        android:id="@+id/textOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="20dp"
        android:text="@string/or"
        android:visibility="gone"
        android:textColor="@color/colorWhite"
        app:layout_constraintStart_toEndOf="@+id/viewOne"
        app:layout_constraintTop_toBottomOf="@+id/sign_up" />

    <View
        android:id="@+id/viewTwo"
        android:layout_width="90dp"
        android:layout_height="1dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="8dp"
        android:visibility="gone"
        android:background="@color/quantum_grey"
        app:layout_constraintStart_toEndOf="@+id/textOr"
        app:layout_constraintTop_toBottomOf="@+id/sign_up" />


    <Button
        android:id="@+id/google_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/colorWhite"
        android:fontFamily="@font/regular"
        android:text="@string/google"
        android:visibility="gone"
        android:textAllCaps="false"
        app:icon="@drawable/ic_google"
        app:iconTint="@color/quantum_amber50"
        app:iconTintMode="multiply"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textOr" />

    <Button
        android:id="@+id/fb_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/colorWhite"
        android:fontFamily="@font/regular"
        android:text="@string/facebook"
        android:visibility="gone"
        android:textAllCaps="false"
        app:icon="@drawable/vc_fb"
        app:iconTintMode="add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textOr" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/bold"
        android:id="@+id/skip_btn"
        android:text="Skip"
        android:textColor="@color/quantum_white_100"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fb_sign_in" />


</androidx.constraintlayout.widget.ConstraintLayout>